--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "An Do",
-    "short_name": "andoDsAI.github.io",
+    "short_name": "andoDsAI.com",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
